crates/swc_ecma_parser/tests/flow/invalid_syntax/migrated_0016.js
function hello() { "use strict"; var enum; }
